--- a/index.html
+++ b/index.html
@@ -1,7 +1,30 @@
-<html>
-  <head>
-  </head>
-  <body>
-    <p>Hello World!</p>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Weather Forecast</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="script.js"></script> <!-- Include your separate JavaScript file -->
+</head>
+<body>
+    <header>
+        <h1>Weather Forecast</h1>
+        <p>Check the latest weather updates</p>
+    </header>
+
+    <div class="container">
+        <div class="weather-info" id="weather-info">
+            <!-- Weather data will be displayed here -->
+        </div>
+        <div class="nasa-info" id="nasa-info">
+          <!-- Weather data will be displayed here -->
+      </div>
+    </div>
+
+    <footer>
+        &copy; 2023 Weather Forecast Website
+    </footer>
+</body>
 </html>
