--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
         <div class="weather-info" id="weather-info">
             <!-- Weather data will be displayed here -->
         </div>
-        <div class="nasa-info" id="nasa-info">
-          <!-- Weather data will be displayed here -->
-      </div>
+        <h1 id="charinfo">Game of Thrones Character Info</h1>
+        <div id="character-info"></div>
     </div>
 
     <footer>
