--- a/Lab 4/chat.html
+++ b/Lab 4/chat.html
@@ -59,11 +59,11 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#our-mission">Our Mission</a></li>
-            <li><a href="#why-choose-itws">Why Choose ITWS at RPI?</a></li>
-            <li><a href="#our-vision">Our Vision</a></li>
-            <li><a href="#contact-us">Contact Us</a></li>
+            <li><a href="chat.html">Home</a></li>
+            <li><a href="programs.html">Programs</a></li>
+            <li><a href="faculty.html">Faculty</a></li>
+            <li><a href="news.html">News</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <div class="container" id="home">
