added pdf and more page

--- a/quiz1/index.html
+++ b/quiz1/index.html
@@ -10,15 +10,16 @@
 </head>
 <body>
     <header>
-        <h1>Weather Forecast</h1>
-        <p>Check the latest weather updates</p>
+        <h1>Eden's Tools</h1>
+        <p>Useful tools made by Eden Bendheim</p>
+        <a href="chat.html"></a>
     </header>
 
     <div class="container">
         <div class="weather-info" id="weather-info">
         </div>
-        <h1 id="charinfo">Game of Thrones Character Info</h1>
-        <div id="character-info"></div>
+        <!-- <h1 id="charinfo">Game of Thrones Character Info</h1>
+        <div id="character-info"></div> -->
         
         <br>
         <h1 id="charinfo">Currency Converter</h1>
@@ -35,6 +36,9 @@
         </select>
         <br><br>
         <div id="money-info"></div>
+
+        <h1 id="charinfo"> Check out this Game of Thrones info page!</h1>
+        <a href="GOT.html">Click Me!</a>
     </div>
 
     
