--- a/Lab 5/index.html
+++ b/Lab 5/index.html
@@ -32,6 +32,7 @@ font-family:"Noto Sans",Calibri,sans-serif
 
 body {
 max-width:650px;
+max-height: 2000px;
 margin:auto auto 3em;
 font-size:100%
 }
