--- a/Quiz 2/lab6.html
+++ b/Quiz 2/lab6.html
@@ -7,7 +7,8 @@
         <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
         <link rel="stylesheet" type="text/css" href="styles.css">
         <link rel="icon" href="favicon.ico">
-        <script src="../resources/jquery-3.7.1.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <!-- <script src="../resources/jquery-3.7.1.min.js"></script> -->
         <script src="lab6.js"></script>
 
         <title>WMS | SmartBoard</title>
